--- a/ios-junior-engineer-codecheck/Info.plist
+++ b/ios-junior-engineer-codecheck/Info.plist
@@ -6,5 +6,9 @@
 	<array>
 		<string>ja</string>
 	</array>
+	<key>UIAppFonts</key>
+	<array>
+		<string>Corporate-Logo-Rounded-Bold-ver3.otf</string>
+	</array>
 </dict>
 </plist>
