--- a/ios-junior-engineer-codecheck.xcodeproj/xcshareddata/xcschemes/ios-junior-engineer-codecheck.xcscheme
+++ b/ios-junior-engineer-codecheck.xcodeproj/xcshareddata/xcschemes/ios-junior-engineer-codecheck.xcscheme
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
    LastUpgradeVersion = "1420"
-   version = "1.3">
+   version = "1.7">
    <BuildAction
       parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES">
@@ -27,6 +27,12 @@
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
+      <TestPlans>
+         <TestPlanReference
+            reference = "container:ios-junior-engineer-codecheckTests/ios-junior-engineer-codecheck.xctestplan"
+            default = "YES">
+         </TestPlanReference>
+      </TestPlans>
       <Testables>
          <TestableReference
             skipped = "NO"
@@ -36,17 +42,6 @@
                BlueprintIdentifier = "4ABEC4BD2AB88C8E00905257"
                BuildableName = "ios-junior-engineer-codecheckUITests.xctest"
                BlueprintName = "ios-junior-engineer-codecheckUITests"
-               ReferencedContainer = "container:ios-junior-engineer-codecheck.xcodeproj">
-            </BuildableReference>
-         </TestableReference>
-         <TestableReference
-            skipped = "NO"
-            parallelizable = "YES">
-            <BuildableReference
-               BuildableIdentifier = "primary"
-               BlueprintIdentifier = "4ADF28062AB88FB1005A5F9A"
-               BuildableName = "ios-codecheckUITests.xctest"
-               BlueprintName = "ios-codecheckUITests"
                ReferencedContainer = "container:ios-junior-engineer-codecheck.xcodeproj">
             </BuildableReference>
          </TestableReference>
